# rapibot

./: .breakpoints  .gitignore  .replit  7bbot.py  7bcommands.py  README.md  app.py  pyproject.toml  queryfinder.py  youtubeplayer.py
cogs/: Datab.py  Reddit.py  Youtube.py
