[tool.poetry]
name = "repl_python3_rapibot"
version = "0.1.0"
description = ""
authors = ["Erdemozturk1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.4.0"
discord = "^1.7.3"
Flask = "^2.0.1"
pafy = "^0.5.5"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
